# stalk-api-example

./: .gitmodules  CMakeIncludes.txt  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  core_routes.cpp  core_routes.h  main.cpp  metrics_instance.cpp  metrics_instance.h  server_credentials.h
src/middleware/: middleware.cpp  middleware.h  middleware_delayer.cpp  middleware_delayer.h  middleware_metrics.cpp  middleware_metrics.h  middleware_secure_header_hoister.cpp  middleware_secure_header_hoister.h
src/routes/: route_chains.h  route_delayer.cpp  route_delayer.h  route_helpers.cpp  route_helpers.h  route_logging.cpp  route_logging.h  route_metrics.cpp  route_metrics.h
src/utils/: string_transform.h
